--- a/src/experimental/v2/styles/v2.css
+++ b/src/experimental/v2/styles/v2.css
@@ -9,7 +9,7 @@
 	height: 100%;
 	display: flex;
 	flex-direction: row;
-	border: 1px solid var(--background-modifier-border);
+	border-top: 1px solid var(--background-modifier-border);
 }
 
 .view-content.task-genius-v2-view {
