--- a/src/experimental/v2/styles/v2.css
+++ b/src/experimental/v2/styles/v2.css
@@ -863,3 +863,27 @@
 		opacity: 1;
 	}
 }
+
+
+.onboarding-shadow {
+	position: absolute;
+	background: hsl(var(--color-accent-hsl), 0);
+	border-radius: 24px;
+	rotate: 35deg;
+	width: 260px;
+	top: 200px;
+	height: 400px;
+	filter: blur(150px);
+	animation: shadow-slide infinite 4s linear alternate;
+}
+
+@keyframes shadow-slide {
+	0% {
+		background: hsl(var(--color-accent-hsl), 0.2);
+		right: 360px
+	}
+	to {
+		background: hsl(var(--color-accent-hsl), 0.8);
+		right: 160px
+	}
+}
